--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Homepage of Chandra Shekhar</title>
+<title>Chandra Shekhar</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
 <header>
-Homepage of Chandra Shekhar
+Chandra Shekhar
 </header>
 
 <nav>
@@ -21,34 +21,42 @@ Homepage of Chandra Shekhar
 <a href="service.html">Service</a>
 </nav>
 
-<div class="section-title">Contact Information</div>
-
 <div class="container">
 
-<div class="left">
-<p><strong>Affiliation:</strong><br>
-Integrated PhD Student in Mathematics,<br>
-Indian Institute of Science, Bangalore</p>
+<h2>Integrated PhD Student in Mathematics</h2>
+<p>Indian Institute of Science (IISc), Bangalore</p>
 
-<p><strong>Office:</strong><br>
-Department of Mathematics,<br>
-IISc Bangalore</p>
-
-<p><strong>Email:</strong><br>
-shekhar.chandra.cs0101@gmail.com</p>
-
-<p><strong>Research Interests:</strong><br>
-Representation Theory, Quantum Groups, Number Theory</p>
-</div>
-
-<div class="right">
-<img src="yourphoto.jpg" alt="Profile Photo">
-<p class="cv-links">
-CVs:
-<a href="#">[Abridged]</a> |
-<a href="#">[Detailed]</a>
+<p>
+I am currently pursuing an Integrated PhD in Mathematics at the Indian Institute of Science (IISc), Bangalore. My research interests lie in Representation Theory, Quantum Groups, and Number Theory.
 </p>
-</div>
+
+<h3>Research Interests</h3>
+<ul>
+<li>Representation Theory</li>
+<li>Quantum Groups</li>
+<li>Algebraic Number Theory</li>
+</ul>
+
+<h3>Education</h3>
+<p>
+<strong>Indian Institute of Science (IISc), Bangalore</strong><br>
+Integrated PhD in Mathematics (2025–Present)
+</p>
+
+<p>
+<strong>Indian Institute of Technology (IIT) Guwahati</strong><br>
+M.Sc. Mathematics and Computing (2022–2024)
+</p>
+
+<p>
+<strong>MDS University, Ajmer</strong><br>
+B.Sc. (Physics, Chemistry, Mathematics) – First Rank in Batch (2019–2022)
+</p>
+
+<h3>Contact</h3>
+<p>
+Email: shekhar.chandra.cs0101@gmail.com
+</p>
 
 </div>
 
