Update academic site content across core pages

--- a/grants.html
+++ b/grants.html
@@ -3,17 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grants and Awards | Chandra Shekhar</title>
+<title>Awards and Honors | Chandra Shekhar</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<!-- Site-wide header section -->
 <header>
-Grants and Awards
+Awards and Honors
 </header>
 
-<!-- Main navigation shared across all pages -->
 <nav>
 <a href="index.html">Home</a>
 <a href="publications.html">Publications</a>
@@ -23,15 +21,19 @@ Grants and Awards
 </nav>
 
 <main>
-    <!-- Awards and fellowships section -->
-    <section aria-labelledby="grants-heading">
-        <h1 id="grants-heading" class="section-title">Awards and Fellowships</h1>
+    <section aria-labelledby="awards-heading">
+        <h1 id="awards-heading" class="section-title">Awards and Honors</h1>
         <div class="content">
             <ul>
-                <li>Prime Minister's Research Fellowship (PMRF), Government of India, 2024-2028.</li>
-                <li>Institute Fellowship for Integrated PhD, Indian Institute of Science, 2023-present.</li>
-                <li>Young Researcher Travel Grant, International Mathematical Union, 2024.</li>
-                <li>Best Graduate Presentation Award, IISc Mathematics Symposium, 2023.</li>
+                <li>CSIR-NET JRF (Dec 2024) &ndash; AIR 60 (99.71 percentile)</li>
+                <li>CSIR-NET JRF (June 2024) &ndash; AIR 98 (98.99 percentile)</li>
+                <li>CSIR-NET (June 2023) &ndash; AIR 96</li>
+                <li>GATE 2025 &ndash; AIR 75 (Score 563)</li>
+                <li>GATE 2024 &ndash; AIR 215 (Score 553)</li>
+                <li>NBHM Interview Call (2023, 2024)</li>
+                <li>IIT-JAM 2025 &ndash; AIR 137</li>
+                <li>IIT-JAM 2022 &ndash; AIR 209</li>
+                <li>Batch Topper &ndash; B.Sc.</li>
             </ul>
         </div>
     </section>
