--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-Homepage of Chandra Shekhar
+Chandra Shekhar
 </header>
 
 <nav>
@@ -21,36 +21,39 @@ Homepage of Chandra Shekhar
 <a href="service.html">Service</a>
 </nav>
 
-<div class="section-title">Contact Information</div>
+<main>
+    <section>
+        <h1 class="section-title">Integrated PhD Student in Mathematics</h1>
+        <p>Indian Institute of Science (IISc), Bangalore</p>
+        <p>I am currently pursuing an Integrated PhD in Mathematics at the Indian Institute of Science (IISc), Bangalore. My research interests lie in Representation Theory, Quantum Groups, and Number Theory.</p>
+    </section>
 
-<div class="container">
+    <section>
+        <h2 class="section-title">Research Interests</h2>
+        <ul>
+            <li>Representation Theory</li>
+            <li>Quantum Groups</li>
+            <li>Algebraic Number Theory</li>
+        </ul>
+    </section>
 
-<div class="left">
-<p><strong>Affiliation:</strong><br>
-Integrated PhD Student in Mathematics,<br>
-Indian Institute of Science, Bangalore</p>
+    <section>
+        <h2 class="section-title">Education</h2>
+        <p><strong>Indian Institute of Science (IISc), Bangalore</strong><br>
+        Integrated PhD in Mathematics (2025&ndash;Present)</p>
 
-<p><strong>Office:</strong><br>
-Department of Mathematics,<br>
-IISc Bangalore</p>
+        <p><strong>Indian Institute of Technology (IIT) Guwahati</strong><br>
+        M.Sc. Mathematics and Computing (2022&ndash;2024)</p>
 
-<p><strong>Email:</strong><br>
-shekhar.chandra.cs0101@gmail.com</p>
+        <p><strong>MDS University, Ajmer</strong><br>
+        B.Sc. (Physics, Chemistry, Mathematics) &ndash; First Rank in Batch (2019&ndash;2022)</p>
+    </section>
 
-<p><strong>Research Interests:</strong><br>
-Representation Theory, Quantum Groups, Number Theory</p>
-</div>
-
-<div class="right">
-<img src="yourphoto.jpg" alt="Profile Photo">
-<p class="cv-links">
-CVs:
-<a href="#">[Abridged]</a> |
-<a href="#">[Detailed]</a>
-</p>
-</div>
-
-</div>
+    <section>
+        <h2 class="section-title">Contact</h2>
+        <p>Email: <a href="mailto:shekhar.chandra.cs0101@gmail.com">shekhar.chandra.cs0101@gmail.com</a></p>
+    </section>
+</main>
 
 </body>
 </html>
