--- a/service.html
+++ b/service.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-<!-- Site-wide header section -->
 <header>
-Academic Service
+Service
 </header>
 
-<!-- Main navigation shared across all pages -->
 <nav>
 <a href="index.html">Home</a>
 <a href="publications.html">Publications</a>
@@ -23,16 +21,10 @@ Academic Service
 </nav>
 
 <main>
-    <!-- Academic service activities section -->
     <section aria-labelledby="service-heading">
-        <h1 id="service-heading" class="section-title">Service Activities</h1>
+        <h1 id="service-heading" class="section-title">Service</h1>
         <div class="content">
-            <ul>
-                <li>Reviewer for Journal of Algebraic Combinatorics (2024-present).</li>
-                <li>Organizer, Graduate Student Seminar in Mathematics, IISc Bangalore (2023-present).</li>
-                <li>Mentor, Undergraduate Research Initiative in Pure Mathematics (2024).</li>
-                <li>Volunteer, National Mathematics Outreach Program for Schools (2022-2024).</li>
-            </ul>
+            <p>Academic participation in seminars, mentoring, and departmental activities.</p>
         </div>
     </section>
 </main>
