--- a/talks.html
+++ b/talks.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-<!-- Site-wide header section -->
 <header>
-Selected Talks
+Talks
 </header>
 
-<!-- Main navigation shared across all pages -->
 <nav>
 <a href="index.html">Home</a>
 <a href="publications.html">Publications</a>
@@ -23,16 +21,10 @@ Selected Talks
 </nav>
 
 <main>
-    <!-- Conference talks section -->
     <section aria-labelledby="talks-heading">
-        <h1 id="talks-heading" class="section-title">Conference and Seminar Talks</h1>
+        <h1 id="talks-heading" class="section-title">Talks</h1>
         <div class="content">
-            <ul>
-                <li>"Quantum Groups and Their Applications", International Congress on Algebra, 2025, Berlin, Germany.</li>
-                <li>"Hecke Algebras in Number Theory", Annual Number Theory Conference, 2024, Chennai, India.</li>
-                <li>"Recent Trends in Representation Theory", Young Mathematicians Symposium, 2023, Bangalore, India.</li>
-                <li>"Modular Forms and Arithmetic Geometry", Institute Colloquium Series, 2022, IISc Bangalore.</li>
-            </ul>
+            <p>Seminar and conference presentations will be updated here.</p>
         </div>
     </section>
 </main>
