--- a/publications.html
+++ b/publications.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-<!-- Site-wide header section -->
 <header>
 Publications
 </header>
 
-<!-- Main navigation shared across all pages -->
 <nav>
 <a href="index.html">Home</a>
 <a href="publications.html">Publications</a>
@@ -23,16 +21,12 @@ Publications
 </nav>
 
 <main>
-    <!-- Publications list section -->
     <section aria-labelledby="publications-heading">
-        <h1 id="publications-heading" class="section-title">Selected Publications</h1>
+        <h1 id="publications-heading" class="section-title">Publications</h1>
         <div class="content">
-            <ul>
-                <li>Chandra Shekhar, A. Kumar, "Representations of Quantum Affine Algebras", Journal of Algebraic Structures, 2024, <a href="https://doi.org/10.1000/jas.2024.001">https://doi.org/10.1000/jas.2024.001</a></li>
-                <li>Chandra Shekhar, M. Rao, "On Modular Forms and Hecke Operators", International Journal of Number Theory, 2023, <a href="https://doi.org/10.1000/ijnt.2023.014">https://doi.org/10.1000/ijnt.2023.014</a></li>
-                <li>Chandra Shekhar, L. Sen, "Categorification in Representation Theory", Advances in Pure Mathematics, 2022, <a href="https://doi.org/10.1000/apm.2022.078">https://doi.org/10.1000/apm.2022.078</a></li>
-                <li>Chandra Shekhar, "q-Series Identities and Partition Asymptotics", Annals of Mathematical Research, 2021, <a href="https://doi.org/10.1000/amr.2021.205">https://doi.org/10.1000/amr.2021.205</a></li>
-            </ul>
+            <p>Research articles and preprints will be listed here.</p>
+            <p><strong>Format:</strong><br>
+            Author(s), Title, Journal, Year. DOI: link</p>
         </div>
     </section>
 </main>
